--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <a class="footer-link" href="https://www.Facebook.com/">Facebook</a>
         <a class="footer-link" href="https://twitter.com/">Twitter</a>
         <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-        <p id="foot">© 2018 Garuka Ranasinghe.</p>
+        <p id="foot">2023 Garuka Ranasinghe.</p>
       </div>
 
   </body>
