--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="bottom-div">
         <a class="footer-link" href="https://www.Facebook.com/">Facebook</a>
         <a class="footer-link" href="https://twitter.com/">Twitter</a>
-        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <a class="footer-link" href="https://garukar.github.io/Garuka-Personal/">Website</a>
         <p id="foot">2023 Garuka Ranasinghe.</p>
       </div>
 
